<resources>
    <string name="app_name">ShopList</string>

    ///Splash Screen
    <string name="title" translatable="false">Lircayhub \n
    Lisbeth González Castillo \n
    ligonzalez20@alumnos.utalca</string>

    ///Main menu
    <string name="main_menuText">Bienvenido a:  Tu Lista de Compras</string>
    <string name="buy">Comprar</string>
    <string name="stores">Tiendas</string>
    <string name="inventory">Inventario</string>

    ///Buy
    <string name="buyTitle">Compras</string>

    ///Stores
    <string name="storeTitle">Tiendas Disponibles</string>

    ///Inventory
    <string name="inventoryTitle">Inventario</string>

    ///Others
    <string name="back">Volver</string>
    <string name="add">Añadir</string>
    <string name="quantity">Cantidad: </string>
    <string name="price">Precio:$ </string>
    <string name="add_product">Agregar Producto</string>
    <string name="search">Buscar</string>

    <string name="orderBy">Ordenado por:</string>
    <string name="orderName">Nombre A-Z</string>
    <string name="orderCategory">Categoria</string>
    <string name="orderQuantity">Cantidad</string>

    //Add Text
    <string name="add_name">Nombre</string>
    <string name="add_detail">Especificacion</string>
    <string name="add_quantity">Cantidad</string>
    <string name="add_price">Precio</string>
    <string name="add_location">Ubicacion</string>
    <string name="add_buy">Agregar a Compra</string>
    <string name="add_inventory">Agregar a Inventario</string>
</resources>