<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/limeGreen"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/otherGreen"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="337dp"
        android:layout_height="46dp"
        android:layout_marginEnd="11dp"
        android:background="@color/white"
        android:hint="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="170dp">

        <ListView
            android:id="@+id/buyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkGreen"
            android:divider="@color/otherGreen"
            android:dividerHeight="2dp"
            android:textColor="@color/black"
            android:textFilterEnabled="true" />
    </LinearLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="63dp"
        android:layout_height="48dp"
        app:icon="@android:drawable/ic_menu_search"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/show_order"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="195dp"
        android:text="@string/orderName"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/orderBy"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/show_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />


</androidx.constraintlayout.widget.ConstraintLayout>